Feat: cron matomo

--- a/.env.dist
+++ b/.env.dist
@@ -3,6 +3,9 @@
 # --- Paramètres Généraux ---
 # Dossier racine où les sauvegardes seront stockées
 BACKUP_BASE_DIR="/data/backups"
+# Dossier racine où les logs seront stockés
+LOGS_BASE_DIR="/data/logs"
+
 
 # --- Liste des services à sauvegarder ---
 # Format : "NOM_SERVICE;NOM_CONTENEUR_DOCKER;NOM_DB;USER_DB;PASSWORD_DB;[RETENTION_JOURS];[RETENTION_MOIS]"
