CFeat: health_check

--- a/.env.dist
+++ b/.env.dist
@@ -23,3 +23,18 @@ SERVICES_TO_BACKUP=(
 # --- Politique de Rétention ---
 DAILY_RETENTION_DAYS=7
 MONTHLY_RETENTION_MONTHS=6
+
+# --- Health Check ---
+# Adresse email pour les alertes de health check
+HEALTH_CHECK_EMAIL="admin@example.com"
+
+# Liste des URLs à surveiller
+# Format : "URL;LABEL;CODES_HTTP_ATTENDUS"
+# Les codes HTTP attendus sont séparés par des espaces (par défaut : "200 304")
+# Exemples :
+#   "https://example.com;Site principal;200 301"
+#   "https://api.example.com/health;API Health;200"
+HEALTH_CHECK_URLS=(
+  "https://example.com;Site exemple;200 304"
+  "https://www.example.com/api/health;API Health;200"
+)
