Fix: mail sender

--- a/.env.dist
+++ b/.env.dist
@@ -27,6 +27,8 @@ MONTHLY_RETENTION_MONTHS=6
 # --- Health Check ---
 # Adresse email pour les alertes de health check
 HEALTH_CHECK_EMAIL="admin@example.com"
+# Nom de l'expéditeur pour les emails de health check
+HEALTH_CHECK_FROM_NAME="VPS Health Monitor"
 
 # Liste des URLs à surveiller
 # Format : "URL;LABEL;CODES_HTTP_ATTENDUS"
