--- a/.env.dist
+++ b/.env.dist
@@ -29,6 +29,8 @@ MONTHLY_RETENTION_MONTHS=6
 HEALTH_CHECK_EMAIL="admin@example.com"
 # Nom de l'expéditeur pour les emails de health check
 HEALTH_CHECK_FROM_NAME="VPS Health Monitor"
+# Adresse email de l'expéditeur (doit être un domaine autorisé par votre serveur SMTP)
+HEALTH_CHECK_FROM_EMAIL="noreply@example.com"
 
 # Liste des URLs à surveiller
 # Format : "URL;LABEL;CODES_HTTP_ATTENDUS"
